--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
                      <div id="dialog-modal" title="Manage Your Content" style="display: none;">
-                         <textarea id="cms_editor" name="cms_editor"></textarea>
+                         <textarea id="cms_editor" rows="" cols="" name="cms_editor"></textarea>
                         
                      </div>
             </section>
